@@ -23,7 +23,9 @@ fixits.
 the next release of clazy
 * detaching-temporary and detaching-member checks provide fixits for methods
 that have const coutnerparts
-
+* NOLINT/NOLINTNEXTLINE/NOLINTBEGIN/NOLINTEND all work in clazy now as
+expected. Individual clazy checks can be disabled when using a "clazy-"
+prefix. For example "NOLINTNEXTLINE(clazy-qfileinfo-exists, clazy-qstring-arg)"
 Version 1.15
 ~~~~~~~~~~~~
 Released: 2025-06-12
